--- a/Figma.html
+++ b/Figma.html
@@ -1,7 +1,8 @@
 <html>
 <head>
+<title>Cloud Passport UI</title>
 </head>
 <body>
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FQ3faTBapseE4oaNYFJ1BzT%2FPassport-Web-APP%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1920" height="1080" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FQ3faTBapseE4oaNYFJ1BzT%2FPassport-Web-APP%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
 </body>
 </html>
